# multi-sport-predictions

./: .gitignore  README.md  analysis_championships.md  download_data.bat  index.html  install.bat  progress.md  pyproject.toml  requirements.txt  run_analysis.bat  run_tui.bat  training_output.txt
config/: config.json
dashboard/: package-lock.json
data/: README.md  github_repos.json  kaggle_datasets.json  live_player_data.json  player_props_predictions.json  prediction_history.csv  predictions.json
experiments/: best_per_bet_summary.md  multi_sport_specialized_results.md
models/: README.md  fatigue_analysis.json  multi_sport_comparison.json  specialized_bet_types_results.json  training_summary.json  training_summary_v2.json  v13_metrics.json  v6_basketball_results.json  v6_enhanced_results.json  v6_mlb_metrics.json  v6_mlb_moneyline_specialized.pkl  v6_mlb_spread_specialized.pkl  v6_mlb_total_specialized.pkl  v6_nba_metrics.json  v6_nfl_complete.pkl  v6_nfl_metrics.json  v6_nfl_spread_specialized.pkl  v6_nhl_metrics.json  v6_nhl_spread_specialized.pkl  v6_ou_specialized.pkl  v6_props_metrics.json  v6_soccer_metrics.json  v6_soccer_moneyline_specialized.pkl  v6_soccer_total_specialized.pkl  v7_advanced_results.json  v7_mlb_moneyline_advanced.pkl  v7_nhl_spread_advanced.pkl
scripts/: analyze_bet_styles.py  analyze_sports_data.py  check_live_data_sources.py  check_model.py  check_nfl_data.py  collect_data.py  copy_datasets.py  download_datasets.py  fatigue_analysis.py  fetch_live_player_stats.py  fetch_mlb_data.py  fetch_nfl_data.py  gather_free_data.py  generate_analysis_report.py  generate_real_predictions.py  prediction_api.py  (+25 more)
(+142 files in other folders)
